# sim

./: .gitignore  00000010  LICENSE  Makefile  README.md  converted.xml  hl7example.xml  main.cpp  out.html  przyklad.html  report_hl7_template.xml  tagi.txt  tagiUnicode.txt  tmp.xml  xmlload.cpp
labs/imebra/: CMakeLists.txt  readme.rst  setup.py
labs/imebra/docs/coverage/: index-sort-f.html  index-sort-l.html  index.html
labs/imebra/docs/coverage/objectivec/src/: imebra_VOILUT.mm.func-sort-c.html  imebra_VOILUT.mm.func.html  imebra_VOILUT.mm.gcov.html  imebra_acse.mm.func-sort-c.html  imebra_acse.mm.func.html  imebra_acse.mm.gcov.html  imebra_baseStreamInput.mm.func-sort-c.html  imebra_baseStreamInput.mm.func.html  imebra_baseStreamInput.mm.gcov.html  imebra_baseStreamInputOutput.mm.func-sort-c.html  imebra_baseStreamInputOutput.mm.func.html  imebra_baseStreamInputOutput.mm.gcov.html  imebra_baseStreamOutput.mm.func-sort-c.html  imebra_baseStreamOutput.mm.func.html  imebra_baseStreamOutput.mm.gcov.html  imebra_bridgeStructures.mm.func-sort-c.html  imebra_bridgeStructures.mm.func.html  imebra_bridgeStructures.mm.gcov.html  imebra_codecFactory.mm.func-sort-c.html  imebra_codecFactory.mm.func.html  imebra_codecFactory.mm.gcov.html  imebra_colorTransformsFactory.mm.func-sort-c.html  imebra_colorTransformsFactory.mm.func.html  imebra_dataset.mm.func.html  (+105 more)
labs/imebra/docs/html/: .buildinfo  acse_classes.html  add_to_project.html  api.html  build_distribution.html  changes_log.html  compiling_imebra.html  copyright.html  dicom_data_classes.html  dicom_dictionary_classes.html  dicomdir_classes.html  dimse_classes.html  download.html  exception_classes.html  genindex.html  gplv2.html  imaging_classes.html  index.html  introduction.html  memory_management_classes.html  migration_guide.html  objects.inv  objects_lifecycle.html  pipe_classes.html  quick_tour.html  risks_requirements.html  search.html  searchindex.js  sop.html  stream_classes.html  tcp_classes.html  transforms_classes.html  validation.html
labs/imebra/docs/html/.doctrees/: acse_classes.doctree  add_to_project.doctree  changes_log.doctree  compiling_imebra.doctree  copyright.doctree  dicom_data_classes.doctree  dicom_dictionary_classes.doctree  dicomdir_classes.doctree  dimse_classes.doctree  exception_classes.doctree  imaging_classes.doctree  index.doctree  introduction.doctree  memory_management_classes.doctree  objects_lifecycle.doctree  pipe_classes.doctree  quick_tour.doctree  risks_requirements.doctree  stream_classes.doctree  tcp_classes.doctree  transforms_classes.doctree
labs/imebra/docs/html/_sources/: acse_classes.rst.txt  changes_log.rst.txt  compiling_imebra.rst.txt  definition_classes.rst.txt  dicom_data_classes.rst.txt  dicomdir_classes.rst.txt  exception_classes.rst.txt  imaging_classes.rst.txt  index.rst.txt  memory_management_classes.rst.txt  objects_lifecycle.rst.txt  quick_tour.rst.txt  risks_requirements.rst.txt  stream_classes.rst.txt  transforms_classes.rst.txt
labs/imebra/docs/html/_static/: documentation_options.js
labs/imebra/examples/c++/changeTransferSyntax/: changeTransferSyntax.cpp
labs/imebra/examples/c++/dicom2jpeg/: dicom2jpeg.cpp
labs/imebra/examples/golang/: readme.txt
labs/imebra/examples/golang/Dcm2Jpeg/: main.go
labs/imebra/examples/golang/PrintPatientName/: main.go
labs/imebra/examples/golang/cmove/: main.go
labs/imebra/examples/swift/: cmove.swift
labs/imebra/objectivec/include/imebraobjc/: imebra.h  imebra_VOILUT.h  imebra_acse.h  imebra_baseStreamInput.h  imebra_baseStreamInputOutput.h  imebra_baseStreamOutput.h  imebra_codecFactory.h  imebra_colorTransformsFactory.h  imebra_dataset.h  imebra_dateAge.h  imebra_dicomDictionary.h  imebra_dicomDir.h  imebra_dimse.h  imebra_drawBitmap.h  imebra_exceptions.h  imebra_image.h  imebra_lut.h  imebra_memoryStreamInput.h  imebra_memoryStreamOutput.h  imebra_modalityVOILUT.h  imebra_pipe.h  imebra_readMemory.h  imebra_readWriteMemory.h  imebra_readingDataHandler.h  imebra_readingDataHandlerNumeric.h  imebra_streamReader.h  imebra_streamWriter.h  imebra_tag.h  imebra_tagId.h  imebra_tcpAddress.h  imebra_tcpListener.h  imebra_tcpStream.h  imebra_transform.h  imebra_writingDataHandler.h  imebra_writingDataHandlerNumeric.h  tagsEnumeration.h  uidsEnumeration.h
labs/imebra/objectivec/src/: imebra_VOILUT.mm  imebra_acse.mm  imebra_baseStreamInput.mm  imebra_baseStreamInputOutput.mm  imebra_baseStreamOutput.mm  imebra_bridgeStructures.h  imebra_bridgeStructures.mm  imebra_codecFactory.mm  imebra_colorTransformsFactory.mm  imebra_dataset.mm  imebra_dateAge.mm  imebra_dicomDictionary.mm  imebra_dicomDir.mm  imebra_dimse.mm  imebra_drawBitmap.mm  imebra_exceptions.mm  imebra_fileStreamInput.mm  imebra_fileStreamOutput.mm  imebra_image.mm  imebra_lut.mm  imebra_memoryPool.mm  imebra_memoryStreamInput.mm  imebra_memoryStreamOutput.mm  imebra_modalityVOILUT.mm  imebra_nserror.h  imebra_nserror.mm  imebra_pipe.mm  imebra_readMemory.mm  imebra_readWriteMemory.mm  imebra_readingDataHandler.mm  imebra_readingDataHandlerNumeric.mm  imebra_streamReader.mm  imebra_streamWriter.mm  imebra_strings.mm  imebra_tag.mm  imebra_tagId.mm  imebra_tcpAddress.mm  imebra_tcpListener.mm  imebra_tcpStream.mm  imebra_transform.mm  (+4 more)
labs/imebra/tests/: CImbx_tests.cpp  acseTest.cpp  bitTransformTest.cpp  buildImageForTest.cpp  colorConversionTest.cpp  dataSetTest.cpp  dateTimeHandlerTest.cpp  dicomCodecTest.cpp  dicomDictionaryTest.cpp  dimseTest.cpp  drawBitmapTest.cpp  jpegCodecTest.cpp  lutTest.cpp  memoryTest.cpp  modalityVoilutTests.cpp  multipleImagesTest.cpp  numericHandlerTest.cpp  paletteTest.cpp  pipeTest.cpp  streamTest.cpp  stringHandlerTest.cpp  tcpTest.cpp  unicodeStringHandlerTest.cpp  voilutTests.cpp
labs/imebra/tests/objectivec/: objectivecTest.mm
labs/imebra/wrappers/: swig.i
labs/imebra/wrappers/goWrapper/imebra/: imebra.go
labs/imebra/wrappers/javaWrapper/: AndroidManifest.xml  build.gradle  java_wrapper.cxx
labs/imebra/wrappers/javaWrapper/jni/: Android.mk
labs/imebra/wrappers/pythonWrapper/: imebra.py  python_wrapper.cxx
(+163 files in other folders)
